# xapian-hunspell-stemmer

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindHunSpell.cmake
src/example/: hunspell_stemmer.cc
src/include/xapian-hunspell-stemmer/: HunspellStem.h  IconvWrapper.h  InternalStemHunspell.h
